--- a/cfgs/tusimple.yaml
+++ b/cfgs/tusimple.yaml
@@ -19,7 +19,7 @@ loss_parameters:
   upper_weight: 1
   cls_weight: 0
   poly_weight: 300
-batch_size: 16
+batch_size: 8
 epochs: 2695
 optimizer:
   name: Adam
@@ -55,7 +55,7 @@ datasets:
          parameters:
            width: 1152
            height: 648
-      root: "../data_lane-regression/datasets/tusimple"
+      root: "C:/Users/HurrDurr/DS/train_set"
 
   test: &test
     type: LaneDataset
@@ -64,7 +64,7 @@ datasets:
       split: val
       max_lanes: 5
       img_size: [360, 640]
-      root: "../data_lane-regression/datasets/tusimple"
+      root: "C:/Users/HurrDurr/DS/train_set"
       normalize: true
       augmentations: []
 
